# Modern-CPP-Course

./: README.md
selected-topics/lambda-expressions/examples/: lambda_expression_ex1.cpp  lambda_expression_ex2.cpp  lambda_expression_ex3.cpp  lambda_expression_ex4.cpp
selected-topics/pointers/: 1_initialize.cpp  2_sizeof.cpp  3_dereference.cpp  4_dereference2.cpp  5_pointerToPointer.cpp  6_sharing.cpp
selected-topics/pointers/smart_pointers/: shared_pointer.cpp  shared_pointer_2.cpp  unique_pointer.cpp  unique_pointer_2.cpp  weak_pointer.cpp
unit1/cpp_code/: hello  hello.cpp  hello.i
unit1/first_library/: CMakeLists.txt  main
unit1/first_library/src/: first.cpp  main.cpp
unit1/odom_subs/: CMakeLists.txt  package.xml
unit1/odom_subs/src/: odom_vel_listener.cpp
unit1/test_library/: CMakeLists.txt  package.xml
unit1/test_library/src/: test_library.cpp
unit1/velocity_library/: CMakeLists.txt  package.xml
unit2/exercises_unit_2/: CMakeLists.txt  package.xml
unit2/exercises_unit_2/src/: lists.cpp  (+5 more)
unit2/stl_lib/: arr  array_test.cpp  deque1.cpp  it1.cpp  it2.cpp  it3.cpp  list_function.cpp  map1.cpp  set1.cpp  set_function.cpp
unit3/my_robot_manager/: CMakeLists.txt  package.xml
unit3/unit3_demos/: demo_31.cpp  demo_311.cpp  demo_312._2cpp  demo_312_1.cpp  demo_32.cpp  demo_33.cpp  demo_34.cpp  demo_35_1.cpp  demo_35_3.cpp  demo_36.cpp  demo_36_1.cpp  demo_39.cpp
unit4/robot_manager_inheritance/: CMakeLists.txt  package.xml
unit4/unit4_demos/: demo_41.cpp  demo_410.cpp  demo_411.cpp  demo_43.cpp  demo_45.cpp  demo_46.cpp  demo_48.cpp  ex_41.cpp
(+11 files in other folders)
